tests/pass/assign/local_reference_self.tox
class Foo {
  fn returnSelf() -> Foo {
    return Foo {};
  }
}

fn main() {
  print(Foo{}.returnSelf()); // expect:instance
}
