tests/fail/cast/boolean2str.tox


fn main() {
  print true as str;//error: Cannot cast `bool` to type `str`
}